# regintel-ai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
apps/api/: alembic.ini  requirements.txt
apps/api/app/: config.py  database.py  main.py
apps/api/app/models/: __init__.py  audit.py  base.py  document.py  eval.py  query.py  response.py
apps/api/app/routers/: __init__.py  audit.py  documents.py  eval.py  health.py  query.py
apps/api/app/services/: answer_service.py  confidence.py  document_service.py  llm_client.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 001_initial_schema.py  002_embedding_hnsw_index.py
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/web/src/components/: AnswerCard.tsx  CitationList.tsx  ConfidenceBadge.tsx  Nav.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: audit.tsx  documents.tsx  eval.tsx  index.tsx
apps/web/src/styles/: globals.css
apps/worker/: database.py  requirements.txt
apps/worker/tasks/: celery_app.py  ingestion.py
data/gold_queries/: sample_queries.json
infra/: docker-compose.dev.yaml  docker-compose.yaml
infra/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.web.dev  Dockerfile.worker  docker-compose.dev.yml  docker-compose.yml
scripts/: api-dev.sh  web-dev.sh  worker-dev.sh
tests/: conftest.py
tests/eval/: test_retrieval_quality.py
tests/unit/: test_chunker.py  test_confidence.py  test_retrieval.py
